# QueryForge

./: .env.example  .gitignore  README.md  pyproject.toml
src/queryforge/: __init__.py  agent.py  agent_core.py  agent_gemini.py  config.py  db.py  prompt.py  runner.py  sql_guard.py
src/queryforge/web/: __init__.py  app.py
src/queryforge/web/static/: index.html
tests/: test_agent.py  test_agent_gemini.py  test_db.py  test_db_target.py  test_sql_guard.py  test_web.py
